--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,5 +1,11 @@
 <ul>
     <li *ngFor="let todo of todosList">
-        <app-todo [todo]="todo"></app-todo>
+        <app-todo
+          [todo]="todo"
+          (handleDelete)="handleDelete($event)"
+        ></app-todo>
     </li>
 </ul>
+
+
+<app-add-todo (handleAddTodo)="handleAddTodo($event)"></app-add-todo>
