--- a/src/app/list-manager/list-manager.component.html
+++ b/src/app/list-manager/list-manager.component.html
@@ -7,7 +7,11 @@
 
 		<ul>
 			<li *ngFor="let todoItem of todoList">
-				<app-todo-item [item]="todoItem"></app-todo-item>
+				<app-todo-item
+					[item]="todoItem"
+					(remove)="removeItem($event)"
+					(update)="updateItem($event.item, $event.changes)"
+				></app-todo-item>
 			</li>
 		</ul>
 	</div>
