--- a/src/app/heroes/hero-badge/hero-badge.component.css
+++ b/src/app/heroes/hero-badge/hero-badge.component.css
@@ -16,3 +16,28 @@
 .badge:hover {
     background-color:#195ba0;
 }
+
+.item {
+    cursor: pointer;
+    position: relative;
+    left: 0;
+    background-color: #EEE;
+    margin: .5em;
+    padding: .3em 0;
+    height: 1.6em;
+    border-radius: 4px;
+}
+
+.item:hover {
+    color: white;
+    background-color: #b639cd;
+    left: .1em;
+}
+.selected {
+    background-color: #b639cd;
+    color: white;
+}
+.selected:hover {
+    background-color: #882a9a;
+    color: white;
+}
