--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -10,10 +10,12 @@
             <app-hero-badge
               [id]="hero.id"
               [name]="hero.name"
+              [isSelected]="hero === selectedHero"
             ></app-hero-badge>
         </li>
     </ul>
     <app-hero-detail [hero]="selectedHero"></app-hero-detail>
+    <app-hero-debounce></app-hero-debounce>
 </div>
 
 
