--- a/src/app/list-manager/list-manager.component.scss
+++ b/src/app/list-manager/list-manager.component.scss
@@ -1,12 +1,12 @@
 .todo-app {
   position: relative;
-  width: 400px;
+  max-width: 500px;
+  width: auto;
   padding: 30px 30px 15px;
   background: white;
   border: 1px solid;
   border-color: #dfdcdc #d9d6d6 #ccc;
   border-radius: 2px;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   margin: 20px auto;
 }
