--- a/src/app/todos/todo/todo.component.html
+++ b/src/app/todos/todo/todo.component.html
@@ -1,4 +1,7 @@
 <div *ngIf="todo" class="todo">
+	{{obj.title}}
+	{{count}}
+	{{count2}}
 	<div *ngIf="!isEdited">
 		<span (click)="handleTodoEdit()">{{todo.text}}</span>
 		<button (click)="handleDelete.emit(todo.id)">X</button>
