--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,23 @@ ol, ul {
   list-style: none;
 }
 
+.todo-input {
+  padding: 4px 10px 4px;
+  font-size: 16px;
+  font-family: 'Lucida Grande', Verdana, sans-serif;
+  line-height: 20px;
+  border: solid 1px #dddddd;
+  border-radius: 5px;
+  flex-grow: 1;
+  width: 100%;
+}
+
+:host(:not([hidden])) {
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+
 .btn {
   background: lightseagreen;
   color: #fff;
@@ -42,6 +59,18 @@ ol, ul {
 .btn-red:hover {
   background: darkred;
 }
+
+.btn-blue {
+  background: #7070c7;
+}
+
+.btn-blue {
+  background: #7070c7;
+  &:hover {
+    background: #195ba0;
+  }
+}
+
 
 .app-title {
   font-size: 52px;
