--- a/src/app/heroes/hero-debounce/hero-debounce.component.html
+++ b/src/app/heroes/hero-debounce/hero-debounce.component.html
@@ -1,3 +1,3 @@
 <label>Debounced Input value: {{debouncedValue}}
-	<input #input type="text" [(ngModel)]="inputValue">
+	<input #input type="text">
 </label>
