--- a/src/app/list-manager/list-manager.component.html
+++ b/src/app/list-manager/list-manager.component.html
@@ -3,7 +3,7 @@
 		<h1 class="app-title">
 			Welcome to {{ title }}!
 		</h1>
-		<app-input-button-unit (submit)="addItem($event)"></app-input-button-unit>
+		<app-input-button-unit (handleSubmit)="addItem($event)"></app-input-button-unit>
 
 		<ul>
 			<li *ngFor="let todoItem of todoList">
