--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -5,5 +5,6 @@
 		<a routerLink="/list-manager">List Manager</a>
 		<a routerLink="/todos">Todos</a>
 		<a routerLink="/mission">Mission</a>
+		<a routerLink="/crisis">Crisis</a>
 	</nav>
 </header>
