--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -6,5 +6,10 @@
 		<a routerLink="/todos">Todos</a>
 		<a routerLink="/mission">Mission</a>
 		<a routerLink="/crisis">Crisis</a>
+		<a routerLink="/pipes">Pipes</a>
+		<a routerLink="/flying-heroes">Flying Heroes</a>
+		<a routerLink="/flying-heroes">Flying Heroes</a>
+		<a routerLink="/hero-async">Hero async messages</a>
+		<a routerLink="/todos-server-fetching">Todos Server Fetching</a>
 	</nav>
 </header>
