--- a/src/app/pages/heroes/hero-detail/hero-detail.component.html
+++ b/src/app/pages/heroes/hero-detail/hero-detail.component.html
@@ -10,3 +10,4 @@
 	<button (click)="goBack()">go back</button>
 	<button (click)="save()">save</button>
 </div>
+<p>The hero's birthday is {{ date | date }}</p>
