--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,8 @@ body {
   line-height: 22px;
   color: #404040;
   font-family: 'Lucida Grande', Verdana, sans-serif;
+  height: 100%;
+  width: 100%;
 }
 
 ol, ul {
