--- a/src/app/modules/modal/modal-container/modal-container.component.html
+++ b/src/app/modules/modal/modal-container/modal-container.component.html
@@ -1,18 +1,10 @@
 <div
 	class="container"
-	[ngClass]="{
-		'fadeIn': fadeType === 'in',
-		'fadeOut': fadeType === 'out'
-	}"
+	[class.fadeIn]="fadeType === 'in'"
+	[class.fadeOut]="fadeType === 'out'"
 	(transitionend)="transitionEnd($event)"
 >
 	<div class="boxDialog">
-		<input type="text" [(ngModel)]="text">
-<!--		{header({ handleClick })}-->
-		<ng-content></ng-content>
-		<div class="boxContent">
-			<ng-content></ng-content>
-		</div>
 		<ng-template
 			[ngTemplateOutlet]="templateRef"
 			[ngTemplateOutletContext]="{$implicit:{
