--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -38,6 +38,14 @@ a {
   align-self: auto;
 }
 
+.modalContent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
 @media (min-width: 600px) {
   a {
     width: 18%;
