add reusable components

--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -11,5 +11,8 @@
 		<a routerLink="/flying-heroes">Flying Heroes</a>
 		<a routerLink="/hero-async">Hero async messages</a>
 		<a routerLink="/todos-server-fetching">Todos Server Fetching</a>
+		<a routerLink="/modal">Modal</a>
+		<a routerLink="/input-form">Input Form</a>
+		<a routerLink="/reusable-template">Reusable Template</a>
 	</nav>
 </header>
