--- a/src/app/pages/list-manager/todo-item/todo-item.component.html
+++ b/src/app/pages/list-manager/todo-item/todo-item.component.html
@@ -7,7 +7,7 @@
 		<input
 			type="checkbox"
 			class="todo-checkbox"
-			[(ngModel)]="item.completed"
+			[checked]="item.completed"
 			(click)="completeItem()"
 		/>
 	</div>
