--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -14,5 +14,6 @@
 		<a routerLink="/modal">Modal</a>
 		<a routerLink="/input-form">Input Form</a>
 		<a routerLink="/reusable-template">Reusable Template</a>
+		<a routerLink="/switch-case">Switch Case</a>
 	</nav>
 </header>
