--- a/src/app/pages/reusable-template/reusable-template.component.html
+++ b/src/app/pages/reusable-template/reusable-template.component.html
@@ -14,6 +14,7 @@
 	<form #form="ngForm" (ngSubmit)="onSubmit(form)">
 		<input [ngModel]="currentItem.name"  (ngModelChange)="setUppercaseName($event)" name='name' id="example-ngModel">
 		{{currentItem.name}}
+		<button type="submit">SUBMIT</button>
 	</form>
 	<div *ngFor="let item of users; trackBy: trackByItems">
 		({{item.id}}) {{item.name}}
