--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -15,5 +15,6 @@
 		<a routerLink="/input-form">Input Form</a>
 		<a routerLink="/reusable-template">Reusable Template</a>
 		<a routerLink="/switch-case">Switch Case</a>
+		<a routerLink="/heroes-server">Heroes Server</a>
 	</nav>
 </header>
