--- a/src/app/pages/switch-case/switch-case.component.html
+++ b/src/app/pages/switch-case/switch-case.component.html
@@ -47,4 +47,9 @@
 	<span class="error" *ngIf="error">{{error}}</span>
 </form>
 
+<p [appHighlight]="color">Highlight me!</p>
+<p appHighlight>Highlight me!</p>
+
+<!--<p *appUnless="condition">Show this sentence unless the condition is true.</p>-->
+
 
