--- a/src/app/modules/pagination/pagination.component.css
+++ b/src/app/modules/pagination/pagination.component.css
@@ -5,17 +5,31 @@ padding-top: 20px;
 .container {
   display: flex;
   justify-content: space-between;
-  max-width: 350px;
+  max-width: 500px;
   align-items: center;
   margin: 0 auto;
 }
 
+.page-number-container {
+  display: flex;
+}
+
+.empty-block {
+  background: none;
+  border: none;
+  color: black;
+  cursor: default;
+  padding: 10px;
+  min-width: 20px;
+  text-align: center;
+}
+
 .block {
-  padding: 5px;
+  padding: 10px;
   border: 1px solid #ccc;
   margin: 0 1px;
   background: white;
-  width: 20px;
+  min-width: 20px;
   text-align: center;
   text-decoration: none;
 }
