--- a/src/app/pages/heroes-server/heroes-pagination/heroes-pagination.component.html
+++ b/src/app/pages/heroes-server/heroes-pagination/heroes-pagination.component.html
@@ -1,5 +1,6 @@
+
 <app-pagination
 	[activePage]="activePage"
-	[pagesList]="pagesList"
+	[pagesList]="paginationList"
 	(handleChangePage)="handleChangePage($event)"
 ></app-pagination>
