--- a/src/app/modules/pagination/pagination.component.html
+++ b/src/app/modules/pagination/pagination.component.html
@@ -3,7 +3,7 @@
 		<a class="block" (click)="handlePrev()"><span class='item'><</span></a>
 		<div
 			class="page-number-container"
-			*ngFor="let page of pagesList"
+			*ngFor="let page of paginationList"
 		>
 		<a
 			class="block"
