--- a/src/app/pages/heroes-server/heroes-pagination/heroes-pagination.component.html
+++ b/src/app/pages/heroes-server/heroes-pagination/heroes-pagination.component.html
@@ -1,6 +1,7 @@
 
 <app-pagination
 	[activePage]="activePage"
-	[pagesList]="paginationList"
+	[pagesList]="pagesList"
+	[paginationList]="paginationList"
 	(handleChangePage)="handleChangePage($event)"
 ></app-pagination>
