update pagination list

--- a/src/app/pages/heroes-server/heroes-pagination/heroes-pagination.component.html
+++ b/src/app/pages/heroes-server/heroes-pagination/heroes-pagination.component.html
@@ -1,5 +1,6 @@
 
 <app-pagination
+	*ngIf="paginationList.length"
 	[activePage]="activePage"
 	[pagesList]="pagesList"
 	[paginationList]="paginationList"
