--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -16,5 +16,6 @@
 		<a routerLink="/reusable-template">Reusable Template</a>
 		<a routerLink="/switch-case">Switch Case</a>
 		<a routerLink="/heroes-server">Heroes Server</a>
+		<a routerLink="/detect-changes">Detect Changes</a>
 	</nav>
 </header>
