--- a/src/app/pages/input-form/input-form.component.html
+++ b/src/app/pages/input-form/input-form.component.html
@@ -36,4 +36,7 @@
 		</button>
 	</div>
 </ng-template>
+<button #buttonRef>d</button>
+<ng-template >
+</ng-template>
 <app-tab-container [headerTemplate]="customTabButtons"></app-tab-container>
