--- a/src/app/pages/list-manager/list-manager.component.html
+++ b/src/app/pages/list-manager/list-manager.component.html
@@ -3,7 +3,8 @@
 		<h1 class="app-title">
 			Welcome to {{ title }}!
 		</h1>
-		<app-input-button-unit (handleSubmit)="addItem($event)"></app-input-button-unit>
+		<input type="text" [ngModel]="name">
+		<app-input-button-unit (handleSubmit)="addItem($event)" [name]="name"></app-input-button-unit>
 
 		<ul>
 			<li *ngFor="let todoItem of todoList">
