add select options

--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -17,5 +17,6 @@
 		<a routerLink="/switch-case">Switch Case</a>
 		<a routerLink="/heroes-server">Heroes Server</a>
 		<a routerLink="/detect-changes">Detect Changes</a>
+		<a routerLink="/reactive-form">Reactive Form</a>
 	</nav>
 </header>
